[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "links-client"
version = "1.0.0"
description = "Python client library for link-cli (Links Theory database)"
readme = "README.md"
license = {text = "Unlicense"}
authors = [
    {name = "DronDoc Team"}
]
keywords = ["link-cli", "links-theory", "database", "associative", "clink"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Public Domain",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/link-foundation/links-client"
Repository = "https://github.com/link-foundation/links-client"
Issues = "https://github.com/link-foundation/links-client/issues"

[tool.setuptools]
packages = ["links_client", "links_client.services", "links_client.utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
